2010-08-20  Colin Watson  <cjwatson@ubuntu.com>

	* commands/i386/pc/sendkey.c (keysym_table): Rename "numlock" to
	"numcenter" (I misunderstood the purpose of this entry).
	* docs/grub.texi (sendkey): Likewise.

2010-08-20  Colin Watson  <cjwatson@ubuntu.com>

	* commands/i386/pc/sendkey.c (options): Remove "keep" from all
	status flag options; simply omitting the option is equivalent and
	simpler.  Rename "wait" to "pause".  Rename "sysreq" to "sysrq".
	(keysym_table): Rename "num5numlock" to "numlock".
	(grub_cmd_sendkey): Reinitialise `andmask' and `ormask', so that we
	can uniformly say that only the last of multiple `sendkey'
	invocations has any effect.
	* docs/grub.texi (sendkey): New section.

2010-08-19  Colin Watson  <cjwatson@ubuntu.com>

	* commands/i386/pc/sendkey.c (options): Fix three typos.

2010-08-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement sendkey support.

	* commands/i386/pc/sendkey.c: New file.
	* conf/i386-pc.rmk (pkglib_MODULES): Add sendkey.mod.
	(sendkey_mod_SOURCES): New variable.
	(sendkey_mod_CFLAGS): Likewise.
	(sendkey_mod_LDFLAGS): Likewise.

2010-08-18  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Move AM_INIT_AUTOMAKE after AC_CANONICAL_TARGET to
	fix warnings from Autoconf.

2010-08-18  Colin Watson  <cjwatson@ubuntu.com>

	* acinclude.m4 (grub_ASM_USCORE): Use a more accurate grep pattern,
	to avoid false positives with some assemblers that output things
	like "someprefix_func" as part of their output.

2010-08-15  Robert Millan  <rmh@gnu.org>

	* kern/emu/misc.c (grub_get_libzfs_handle): Handle libzfs_init()
	errors.
	* kern/emu/getroot.c (find_root_device_from_libzfs): Handle
	grub_get_libzfs_handle() errors.

2010-08-14  Robert Millan  <rmh@gnu.org>

	* kern/emu/misc.c (grub_find_zpool_from_dir): Abort function if
	filesystem is not ZFS.

2010-08-12  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix for misspelled color names defaulting to black/black (bug
	reported by Doug Nazar)
